tests/testcases/errors/BCE0093-1.boo
"""
BCE0093-1.boo(5,5): BCE0093: Cannot branch into ensure block.  
"""
try:
	goto label
ensure:
	:label

